# klarfio

./: README.md  example.py  klarflib.py  test.py  test_output.klarf  test_output_v1.8.klarf  testfile_v1.2.klarf  testfile_v1.8.klarf
egg_package/: README.md  pyproject.toml
egg_package/src/klarfio/: __init__.py  example.py  klarfio.py  test.py
egg_package/src/klarfio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
egg_package/tests/: how_to_build.txt  setup.py  testfile_v1.8.klarf
