[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "klarfio"
version = "0.9.1"
authors = [
  { name="hadriman"},
]
keywords = ["klarf","defect","wafer","parser","read","write","v1.8","v1.2"]
description = "Minimalist python module to read and write klarf files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: File Formats",
]

[project.urls]
"Homepage" = "https://github.com/hadriman/klarfio"
"Bug Tracker" = "https://github.com/hadriman/klarfio/issues"